Fixed a bug, ran some runs, then realized that there was no bug.

--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,86 @@
+@inproceedings{izmailov2019averaging,
+title = "Averaging weights leads to wider optima and better generalization",
+abstract = "Deep neural networks are typically trained by optimizing a loss function with an SGD variant, in conjunction with a decaying learning rate, until convergence. We show that simple averaging of multiple points along the trajectory of SGD, with a cyclical or constant learning rate, leads to better generalization than conventional training. We also show that this Stochastic Weight Averaging (SWA) procedure finds much broader optima than SGD, and approximates the recent Fast Geometric Ensem-bling (FGE) approach with a single model. Using SWA we achieve notable improvement in test accuracy over conventional SGD training on a range of state-of-the-art residual networks, PyramidNets, DenseNets, and ShakeShake networks on CIFAR-10, CIFAR-100, and ImageNet. In short, SWA is extremely easy to implement, improves generalization, and has almost no computational overhead.",
+author = "Pavel Izmailov and Dmitrii Podoprikhin and Timur Garipov and Dmitry Vetrov and Wilson, {Andrew Gordon}",
+note = "Funding Information: Acknowledgements. This work was supported by NSF IIS-1563887, Samsung Research, Samsung Electronics and Russian Science Foundation grant 17-11-01027. We also thank Vadim Bereznyuk for helpful comments. Funding Information: This work was supported by NSF IIS-1563887, Samsung Research, Samsung Electronics and Russian Science Foundation grant 17-11-01027. We also thank Vadim Bereznyuk for helpful comments. Publisher Copyright: {\textcopyright} 34th Conference on Uncertainty in Artificial Intelligence 2018. All rights reserved.; 34th Conference on Uncertainty in Artificial Intelligence 2018, UAI 2018 ; Conference date: 06-08-2018 Through 10-08-2018",
+year = "2018",
+language = "English (US)",
+series = "34th Conference on Uncertainty in Artificial Intelligence 2018, UAI 2018",
+publisher = "Association For Uncertainty in Artificial Intelligence (AUAI)",
+pages = "876--885",
+editor = "Ricardo Silva and Amir Globerson and Amir Globerson",
+booktitle = "34th Conference on Uncertainty in Artificial Intelligence 2018, UAI 2018",
+}
+
+@Article{HODGKIN1952,
+author={HODGKIN, A. L.
+and HUXLEY, A. F.},
+title={A quantitative description of membrane current and its application to conduction and excitation in nerve},
+journal={The Journal of physiology},
+year={1952},
+month={Aug},
+volume={117},
+number={4},
+pages={500-544},
+keywords={*AXONS; Humans},
+note={12991237[pmid]},
+note={PMC1392413[pmcid]},
+issn={0022-3751},
+doi={10.1113/jphysiol.1952.sp004764},
+url={https://pubmed.ncbi.nlm.nih.gov/12991237},
+url={https://doi.org/10.1113/jphysiol.1952.sp004764},
+language={eng}
+}
+
+
+
+@misc{peng2021hyperbolic,
+      title={Hyperbolic Deep Neural Networks: A Survey}, 
+      author={Wei Peng and Tuomas Varanka and Abdelrahman Mostafa and Henglin Shi and Guoying Zhao},
+      year={2021},
+      eprint={2101.04562},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{ellis2020dreamcoder,
+      title={DreamCoder: Growing generalizable, interpretable knowledge with wake-sleep Bayesian program learning}, 
+      author={Kevin Ellis and Catherine Wong and Maxwell Nye and Mathias Sable-Meyer and Luc Cary and Lucas Morales and Luke Hewitt and Armando Solar-Lezama and Joshua B. Tenenbaum},
+      year={2020},
+      eprint={2006.08381},
+      archivePrefix={arXiv},
+      primaryClass={cs.AI}
+}
+
+@article{hochreiter1997lstm,
+author = {Hochreiter, Sepp and Schmidhuber, Jürgen},
+year = {1997},
+month = {12},
+pages = {1735-80},
+title = {Long Short-term Memory},
+volume = {9},
+journal = {Neural computation},
+doi = {10.1162/neco.1997.9.8.1735}
+}
+
+@misc{cho2014learning,
+      title={Learning Phrase Representations using RNN Encoder-Decoder for Statistical Machine Translation}, 
+      author={Kyunghyun Cho and Bart van Merrienboer and Caglar Gulcehre and Dzmitry Bahdanau and Fethi Bougares and Holger Schwenk and Yoshua Bengio},
+      year={2014},
+      eprint={1406.1078},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@misc{dieng2017topicrnn,
+      title={TopicRNN: A Recurrent Neural Network with Long-Range Semantic Dependency}, 
+      author={Adji B. Dieng and Chong Wang and Jianfeng Gao and John Paisley},
+      year={2017},
+      eprint={1611.01702},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
 @InProceedings{pmlr-v70-shi17a, title = {World of Bits: An Open-Domain Platform for Web-Based Agents}, author = {Tianlin Shi and Andrej Karpathy and Linxi Fan and Jonathan Hernandez and Percy Liang}, booktitle = {Proceedings of the 34th International Conference on Machine Learning}, pages = {3135--3144}, year = {2017}, editor = {Precup, Doina and Teh, Yee Whye}, volume = {70}, series = {Proceedings of Machine Learning Research}, month = {06--11 Aug}, publisher = {PMLR}, pdf = {http://proceedings.mlr.press/v70/shi17a/shi17a.pdf}, url = { http://proceedings.mlr.press/v70/shi17a.html }, abstract = {While simulated game environments have greatly accelerated research in reinforcement learning, existing environments lack the open-domain realism of tasks in computer vision or natural language processing, which operate on artifacts created by humans in natural, organic settings. To foster reinforcement learning research in such settings, we introduce the World of Bits (WoB), a platform in which agents complete tasks on the Internet by performing low-level keyboard and mouse actions. The two main challenges are: (i) to curate a large, diverse set of interesting web-based tasks, and (ii) to ensure that these tasks have a well-defined reward structure and are reproducible despite the transience of the web. To do this, we develop a methodology in which crowdworkers create tasks defined by natural language questions and provide demonstrations of how to answer the question on real websites using keyboard and mouse; HTTP traffic is cached to create a reproducible offline approximation of the web site. Finally, we show that agents trained via behavioral cloning and reinforcement learning can successfully complete a range of our web-based tasks.} }
 
 @article{ToyamaEtAl2021AndroidEnv,
