--- a/tgba/tgba.tex
+++ b/tgba/tgba.tex
@@ -9,6 +9,7 @@
 
 \title{Transcendent Galaxy-Brain Algorithms}
 \author{Alexander Fedorov}
+\date{}
 
 \maketitle
 
@@ -19,6 +20,8 @@ There is no end to what can be learned and how. However, modern machine learning
     TODO: Codewords...
 
     TODO: ...For once, look up IEEE standards on articles? And read the example.
+
+    TODO: Is the abstract still fully relevant? What do we need to add? (At least some mention of AGI for clickbait, right?)
 
 \end{abstract}
 
@@ -71,7 +74,7 @@ In short, we define a \textit{Transcendent Galaxy-Brain Algorithm} to be any alg
 
 Such algorithms are \textbf{AGI-ready}, able to represent everything in the world usefully.
 
-In particular, this definition suggests simple implementations, the simplest of which is perhaps a \textbf{big RNN} with billions of units in state, with an arbitrary but useful loss.
+In particular, this definition suggests simple implementations, the simplest of which is perhaps a \textbf{big RNN} with billions of units in state, with any loss that builds world representations.
 
 Now, to justify the "what", we outline the "why".
 
@@ -187,6 +190,12 @@ Scraping the Web for text (as in \cite{NEURIPS2020_1457c0d6}) or multimodal data
 (It may also be the case that extending the software input paradigm with high-dimensional inputs is beneficial, both for programs and for brain-machine interfaces, though it might destroy privacy on the Web. For example, this allows drawing a whole picture or writing/erasing a whole word block instantly, which may be hard to learn to control but is possible, useful, and does not require changing the user's loss function.)
 
 More generally, environments that encourage self-replication in some manner should be conducive to transcendence, assuming that the agent fits the basic definition of TGBA. Examples include creatures competing for survival, people teaching other people their worldviews, designing an efficient production process, programming a computer, creating AGI. These would encourage simplicity, generality, and usefulness (AGI), which facilitate the runaway worldview creation process that is transcendence. We conjecture that all intuitively-visible acceleration of progress of life (compared to non-life) and humanity has been intrinsically linked to the creation and proliferation of such environments. As such, creating a similar environment for programs will likely lead to AGI.
+
+Relevant criticism:
+
+\begin{itemize}
+\item \textbf{Clearly, not all losses/objectives are conducive to transcendence. A simple extreme example is "kill yourself ASAP".} This is correct, and indicates that there is a best loss for transcendence, which we can find with thought or other manner of computation. A mesa-optimizer is more complex and fragile than a set of heuristics, therefore, learning a mesa-optimizer requires the loss to be stable, as in \textit{building a representation} of the outside world. \textit{Predicting} inputs given masked/perturbed inputs is likely the best loss for transcendence, at least in pre-training. (RL is likely to have difficulties transcending, though Upside Down RL \cite{schmidhuber2020reinforcement} may work better.)
+\end{itemize}
 
 \section{Experiments: Linearithmic vs Quadratic Dense Layers}
 
